# challenge_coodesh

./: Dockerfile  README.md  pyproject.toml
challenge_coodesh/: crud.py  main.py
challenge_coodesh/db/: database.py  models.py  schemas.py
insert_script/: insert.py  run.py
tests/: test_challenge_coodesh.py
