[tool.poetry]
name = "challenge_coodesh"
version = "0.1.0"
description = ""
authors = ["NatanCervinski <natanscer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.1"
fastapi-pagination = "^0.9.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
